fixed alignment

--- a/css/Survey.css
+++ b/css/Survey.css
@@ -1,6 +1,4 @@
 html {
-  margin: 0;
-  padding: 0;
   min-height: 100vh;
   min-width: 100vh;
   background: linear-gradient(0deg, #5f5f5f, #000000, #5f5f5f);
@@ -8,18 +6,23 @@ html {
 
 body {
   color: white;
-  display: block;
-  width: min-content;
   margin: 0 auto;
+  width: min-content;
+
 
 }
 
 #title {
   text-align: center;
+  margin: 0 auto;
+  padding: 20px;
 }
+
 
 #description {
   text-align: center;
+  margin: 0 auto;
+
 
 }
 
@@ -28,6 +31,7 @@ body {
   width: 100%;
   padding: 20px;
   background-color: brown;
+  width: min-content;
 
 }
 
